--- a/HTML/index.html
+++ b/HTML/index.html
@@ -145,11 +145,11 @@
             <p><span class="w3-large w3-margin-right">Cory Ethridge.</span> Student at Cal State Northridge.</p>
             <p>Intrested in Cyber Security.</p><br>
 
-            <img src="images/" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+            <img src="images/daniel.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
             <p><span class="w3-large w3-margin-right">Daniel Parks.</span> Student at Cal State Northridge.</p>
             <p>Random ish about Daniel.</p><br>
 
-            <img src="images/" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+            <img src="images/mikayel.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
             <p><span class="w3-large w3-margin-right">Mikayel Mansuryan.</span> Student at Cal State Northridge.</p>
             <p>Random ish about Mikayel.</p><br>
 
